force-app/main/default/objects/FinServ__Employment__c/FinServ__Employment__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >FinServ__EmploymentCompactLayout</compactLayoutAssignment>
    <description
  >Represents information about a person&apos;s employment history.</description>
    <label>Employment</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>