force-app/main/default/objects/FinServ__Employment__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicant and Employment realtionship</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Employment</relationshipLabel>
    <relationshipName>Employments</relationshipName>
    <type>Lookup</type>
</CustomField>