force-app/main/default/objects/FinServ__Employment__c/fields/BranchofService__c.field-meta.xml
<CustomField>
    <fullName>BranchofService__c</fullName>
    <description>Capture branch for military type</description>
    <label>Branch of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Marine Corps</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>