force-app/main/default/objects/FinServ__Employment__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <description
  >Describe employee type that is parttime employee or full time</description>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>