force-app/main/default/objects/FinServ__Employment__c/fields/EmployeeType__c.field-meta.xml
<CustomField>
    <fullName>EmployeeType__c</fullName>
    <description
  >Describe employee type that is parttime employee or full time</description>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>parttime</fullName>
                <label>Part Time</label>
            </value>
            <value>
                <fullName>fulltime</fullName>
                <label>Full Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>