force-app/main/default/objects/FinServ__Employment__c/fields/EmployerAddress__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddress__c</fullName>
    <description>Employer Address</description>
    <label>Employer Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>