force-app/main/default/objects/FinServ__Employment__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <description>Employment Status</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active Military</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Government/ Dod</fullName>
            </value>
            <value>
                <fullName>Home Maker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Retired Military</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>