force-app/main/default/objects/FinServ__Employment__c/fields/EmploymentType__c.field-meta.xml
<CustomField>
    <fullName>EmploymentType__c</fullName>
    <description>Employment type</description>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Previous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>