force-app/main/default/objects/FinServ__Employment__c/fields/IncomeType__c.field-meta.xml
<CustomField>
    <fullName>IncomeType__c</fullName>
    <description>Type of income</description>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Gifts</fullName>
            </value>
            <value>
                <fullName>Government Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>