force-app/main/default/objects/FinServ__Employment__c/fields/PayCycle__c.field-meta.xml
<CustomField>
    <fullName>PayCycle__c</fullName>
    <description
  >time interval when payment is made for an employee</description>
    <label>Pay Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>monthly</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>semimonthly</fullName>
                <label>Semi Monthly</label>
            </value>
            <value>
                <fullName>biweekly</fullName>
                <label>Bi-Weekly</label>
            </value>
            <value>
                <fullName>weekly</fullName>
                <label>Weekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>