force-app/main/default/objects/FinServ__Employment__c/fields/PayGrade__c.field-meta.xml
<CustomField>
    <fullName>PayGrade__c</fullName>
    <description
  >Range of amounts that someone can be paid when they are at a particular level in an organization or job</description>
    <label>Pay Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GS1</fullName>
            </value>
            <value>
                <fullName>GS2</fullName>
            </value>
            <value>
                <fullName>GS3</fullName>
            </value>
            <value>
                <fullName>GS4</fullName>
            </value>
            <value>
                <fullName>GS5</fullName>
            </value>
            <value>
                <fullName>GS6</fullName>
            </value>
            <value>
                <fullName>GS7</fullName>
            </value>
            <value>
                <fullName>GS8</fullName>
            </value>
            <value>
                <fullName>GS9</fullName>
            </value>
            <value>
                <fullName>GS10</fullName>
            </value>
            <value>
                <fullName>GS11</fullName>
            </value>
            <value>
                <fullName>GS12</fullName>
            </value>
            <value>
                <fullName>GS13</fullName>
            </value>
            <value>
                <fullName>GS14</fullName>
            </value>
            <value>
                <fullName>GS15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>