force-app/main/default/objects/FinServ__Employment__c/fields/VerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>VerificationStatus__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
                <default>true</default>
                <label>Not Verified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>